# menios_pong

./: .gitignore  Makefile  README.md  emscripten_linux.cross  main.cpp  meson.build  mingw_linux.cross
cross_config/: menios_pong.html
include/: glad.h  khrplatform.h  render_image.h
src/: glad.c  render_image.cpp
